--- a/_sources/content/notebooks/feature_engineering.ipynb
+++ b/_sources/content/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0128c82c",
+   "id": "4b234fe0",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a88483a3",
+   "id": "e478e141",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6ad1b30",
+   "id": "34a11edc",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "647bbd1a",
+   "id": "1cd8876f",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f551c97f",
+   "id": "8ad15806",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1f4bffb",
+   "id": "bcf17052",
    "metadata": {},
    "source": [
     "\n",
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72eeaeff",
+   "id": "81bf1543",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8a2e3a2",
+   "id": "9fbd2b39",
    "metadata": {},
    "source": [
     "\n",
@@ -155,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d694833",
+   "id": "3e921689",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "774b28d3",
+   "id": "0d921902",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7b44513",
+   "id": "542735d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a5d9d61",
+   "id": "8b5eefe1",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39cc3d71",
+   "id": "290f98a9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3de6c45",
+   "id": "a53d7282",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -265,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff1cfd8c",
+   "id": "350efd95",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1523125",
+   "id": "9f1dab8b",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -301,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73d82949",
+   "id": "c6b00629",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -318,7 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11bbf701",
+   "id": "f455bc69",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cfe90fa3",
+   "id": "2af753fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb1fc992",
+   "id": "7d44ef30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1b612d3",
+   "id": "aa0333a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa97de78",
+   "id": "2a0b4516",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "645719fc",
+   "id": "a94c1402",
    "metadata": {},
    "source": [
     "\n",
@@ -417,7 +417,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4425a0c",
+   "id": "7eb3e437",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f4fc672",
+   "id": "6a9d0d04",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -446,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc2af6a5",
+   "id": "7e0d1cdc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,7 +478,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c6b9a33",
+   "id": "71d3778c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0feeb998",
+   "id": "8cb21cb2",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -516,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3011a4a3",
+   "id": "1d326231",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "424d6077",
+   "id": "f04f3c4f",
    "metadata": {},
    "source": [
     "\n",
@@ -538,7 +538,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b43d892d",
+   "id": "c875349c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d58bf02",
+   "id": "9c8f6886",
    "metadata": {},
    "source": [
     "\n",
@@ -561,7 +561,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cbb24292",
+   "id": "cd0a8d73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -585,7 +585,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4dcf397e",
+   "id": "e0786333",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c351af60",
+   "id": "3603f27e",
    "metadata": {},
    "source": [
     "\n",
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d124bdda",
+   "id": "b66afe91",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -642,7 +642,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c5184b1",
+   "id": "985fd440",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -663,7 +663,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19baaada",
+   "id": "63b6fdcf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -722,7 +722,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ea67447",
+   "id": "3d97dbdc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -748,7 +748,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec8397d8",
+   "id": "b5d3f2be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -760,7 +760,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fae07105",
+   "id": "29911650",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -806,7 +806,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "779f70c3",
+   "id": "5986d822",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -834,7 +834,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5387e4e",
+   "id": "340338d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -865,7 +865,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17f43bd2",
+   "id": "109abbc0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -891,7 +891,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ae88fa5",
+   "id": "85dfc462",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -930,7 +930,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5811ad56",
+   "id": "aec1bbaf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -943,7 +943,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11c463f9",
+   "id": "c74aee6c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -958,6 +958,8 @@
     "    all_loads = pl.concat(all_loads[\"load_mw\", \"predicted_load_mw\"])\n",
     "    min_load, max_load = all_loads.min(), all_loads.max()\n",
     "    scale = altair.Scale(domain=[min_load, max_load])\n",
+    "\n",
+    "    # Create the perfect line\n",
     "    chart = (\n",
     "        altair.Chart(\n",
     "            pl.DataFrame(\n",
@@ -979,7 +981,14 @@
     "            ),\n",
     "        )\n",
     "    )\n",
+    "\n",
+    "    # Add lines for each CV fold with date labels\n",
     "    for i, cv_predictions_i in enumerate(cv_predictions):\n",
+    "        # Get date range for this CV fold\n",
+    "        min_date = cv_predictions_i[\"prediction_time\"].min().strftime(\"%Y-%m-%d\")\n",
+    "        max_date = cv_predictions_i[\"prediction_time\"].max().strftime(\"%Y-%m-%d\")\n",
+    "        fold_label = f\"#{i+1} - {min_date} to {max_date}\"\n",
+    "\n",
     "        mean_per_bins = (\n",
     "            cv_predictions_i.group_by(\n",
     "                pl.col(\"predicted_load_mw\").qcut(np.linspace(0, 1, n_bins))\n",
@@ -991,16 +1000,23 @@
     "                ]\n",
     "            )\n",
     "            .sort(\"predicted_load_mw\")\n",
+    "            .with_columns(pl.lit(fold_label).alias(\"fold\"))\n",
     "        )\n",
+    "\n",
     "        chart += (\n",
     "            altair.Chart(mean_per_bins)\n",
     "            .mark_line(tooltip=True, point=True, opacity=0.8)\n",
     "            .encode(\n",
     "                x=altair.X(\"mean_predicted_load_mw:Q\", scale=scale),\n",
     "                y=altair.Y(\"mean_load_mw:Q\", scale=scale),\n",
+    "                color=altair.Color(\n",
+    "                    \"fold:N\",\n",
+    "                    legend=altair.Legend(title=None),\n",
+    "                ),\n",
+    "                detail= altair.Detail(\"fold:N\")\n",
     "            )\n",
     "        )\n",
-    "    return chart\n",
+    "    return chart.resolve_scale(color=\"independent\")\n",
     "\n",
     "\n",
     "plot_reliability_diagram(cv_predictions).interactive().properties(\n",
@@ -1011,7 +1027,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d1f19e3",
+   "id": "0c06c96f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1024,7 +1040,7 @@
     "        # Get date range for this CV fold\n",
     "        min_date = cv_prediction[\"prediction_time\"].min().strftime(\"%Y-%m-%d\")\n",
     "        max_date = cv_prediction[\"prediction_time\"].max().strftime(\"%Y-%m-%d\")\n",
-    "        fold_label = f\"#{i+1} ({min_date} to {max_date})\"\n",
+    "        fold_label = f\"#{i+1} - {min_date} to {max_date}\"\n",
     "\n",
     "        residuals_by_hour_detailed = cv_prediction.with_columns(\n",
     "            [\n",
@@ -1055,7 +1071,6 @@
     "                x=altair.X(\"hour_of_day:O\", title=\"Hour of day\"),\n",
     "                y=altair.Y(\"q25_residual:Q\"),\n",
     "                y2=altair.Y2(\"q75_residual:Q\"),\n",
-    "                tooltip=[\"hour_of_day:O\", \"fold:N\", \"q25_residual:Q\", \"q75_residual:Q\"],\n",
     "            )\n",
     "        )\n",
     "\n",
@@ -1095,7 +1110,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a044817",
+   "id": "3c4bf395",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1139,12 +1154,6 @@
     "                x=altair.X(\"month_of_year:O\", title=\"Month of year\"),\n",
     "                y=altair.Y(\"q25_residual:Q\"),\n",
     "                y2=altair.Y2(\"q75_residual:Q\"),\n",
-    "                tooltip=[\n",
-    "                    \"month_of_year:O\",\n",
-    "                    \"fold:N\",\n",
-    "                    \"q25_residual:Q\",\n",
-    "                    \"q75_residual:Q\",\n",
-    "                ],\n",
     "            )\n",
     "        )\n",
     "\n",
@@ -1184,7 +1193,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85a05808",
+   "id": "cc5f5a1f",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -1206,7 +1215,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8463240b",
+   "id": "4f5547bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1216,7 +1225,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15c3f751",
+   "id": "e58994c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1226,7 +1235,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4af2271a",
+   "id": "282ab81f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1247,7 +1256,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8a31f1b",
+   "id": "5dc4b932",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1263,7 +1272,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2887ac30",
+   "id": "d1eb9f88",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -1279,7 +1288,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57d90bf7",
+   "id": "3f2bd129",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1293,7 +1302,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bcc14e25",
+   "id": "be3296ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1305,7 +1314,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c03035e",
+   "id": "8452bbbd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1321,7 +1330,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1e4bd48",
+   "id": "d493e28c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1389,7 +1398,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9698c0b",
+   "id": "4983de5c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1401,7 +1410,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce26d0c8",
+   "id": "04d7c40a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1412,7 +1421,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc7643d0",
+   "id": "a43b41e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1448,7 +1457,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72fe1d48",
+   "id": "e3c79489",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1458,7 +1467,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76307a0d",
+   "id": "0820985e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1503,7 +1512,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ad1d4d5",
+   "id": "5cfaf7fa",
    "metadata": {},
    "outputs": [],
    "source": []
