--- a/jupyterlite/files/notebooks/feature_engineering.ipynb
+++ b/jupyterlite/files/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e0609dbb",
+   "id": "c1ccfb2d",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8bce1a33",
+   "id": "4507b603",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5ca8621",
+   "id": "ff081f21",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5da6db5a",
+   "id": "fc217c9b",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3b49072",
+   "id": "daae8d0a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da1d4040",
+   "id": "88f3e517",
    "metadata": {},
    "source": [
     "\n",
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50c873df",
+   "id": "f13c61aa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c5bf854",
+   "id": "8b91cf5f",
    "metadata": {},
    "source": [
     "\n",
@@ -155,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "676540c4",
+   "id": "651b5e45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e26ad76",
+   "id": "53986dfc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "299acfea",
+   "id": "0f9cce11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "191e4afe",
+   "id": "6c1cc8b3",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9a38dca",
+   "id": "2af679aa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9851953",
+   "id": "b2be22ec",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -265,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4701342",
+   "id": "96e4b4d9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31c52931",
+   "id": "0bd36908",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -301,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94df2a34",
+   "id": "1666a9ab",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -318,7 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e0c0cf8",
+   "id": "9bf55778",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "594d4011",
+   "id": "639946d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07e13431",
+   "id": "9109cf5b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45b729f3",
+   "id": "fcd3abe2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92877013",
+   "id": "57edd95e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c151edd8",
+   "id": "d8a5d7e4",
    "metadata": {},
    "source": [
     "\n",
@@ -417,7 +417,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5dba2b9a",
+   "id": "4da573a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62390dfa",
+   "id": "60554bf4",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -446,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff032fc4",
+   "id": "600e000e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,7 +478,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55a16488",
+   "id": "e0f4d0d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9097644",
+   "id": "44fad3f6",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -516,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b031b75d",
+   "id": "54b3a9d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6dd3d0b4",
+   "id": "21c993cf",
    "metadata": {},
    "source": [
     "\n",
@@ -538,7 +538,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52ff89ee",
+   "id": "1de32b65",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4147886b",
+   "id": "b65e430e",
    "metadata": {},
    "source": [
     "\n",
@@ -561,7 +561,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71c7906e",
+   "id": "e88d60b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -585,7 +585,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3d56354",
+   "id": "6ca0a74a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f50109c6",
+   "id": "76b03af0",
    "metadata": {},
    "source": [
     "\n",
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bcd123e4",
+   "id": "38241560",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -642,7 +642,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91375b33",
+   "id": "a67ddfdd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -663,7 +663,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a6da18e",
+   "id": "fd2c0a6e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -722,7 +722,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ab6bb1a",
+   "id": "44ab11fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -748,7 +748,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8520c01c",
+   "id": "26357797",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -760,7 +760,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0bb8ac4c",
+   "id": "37c95471",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -806,7 +806,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2c2baaf",
+   "id": "8277a6a5",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -834,7 +834,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33d7a4d9",
+   "id": "09e979a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -865,7 +865,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b608873",
+   "id": "5bb602ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -891,7 +891,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "beed646c",
+   "id": "28dcc3cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -930,7 +930,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b7b9928",
+   "id": "1908d147",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -943,7 +943,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3db3058f",
+   "id": "08563728",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -958,6 +958,8 @@
     "    all_loads = pl.concat(all_loads[\"load_mw\", \"predicted_load_mw\"])\n",
     "    min_load, max_load = all_loads.min(), all_loads.max()\n",
     "    scale = altair.Scale(domain=[min_load, max_load])\n",
+    "\n",
+    "    # Create the perfect line\n",
     "    chart = (\n",
     "        altair.Chart(\n",
     "            pl.DataFrame(\n",
@@ -979,7 +981,14 @@
     "            ),\n",
     "        )\n",
     "    )\n",
+    "\n",
+    "    # Add lines for each CV fold with date labels\n",
     "    for i, cv_predictions_i in enumerate(cv_predictions):\n",
+    "        # Get date range for this CV fold\n",
+    "        min_date = cv_predictions_i[\"prediction_time\"].min().strftime(\"%Y-%m-%d\")\n",
+    "        max_date = cv_predictions_i[\"prediction_time\"].max().strftime(\"%Y-%m-%d\")\n",
+    "        fold_label = f\"#{i+1} - {min_date} to {max_date}\"\n",
+    "\n",
     "        mean_per_bins = (\n",
     "            cv_predictions_i.group_by(\n",
     "                pl.col(\"predicted_load_mw\").qcut(np.linspace(0, 1, n_bins))\n",
@@ -991,16 +1000,23 @@
     "                ]\n",
     "            )\n",
     "            .sort(\"predicted_load_mw\")\n",
+    "            .with_columns(pl.lit(fold_label).alias(\"fold\"))\n",
     "        )\n",
+    "\n",
     "        chart += (\n",
     "            altair.Chart(mean_per_bins)\n",
     "            .mark_line(tooltip=True, point=True, opacity=0.8)\n",
     "            .encode(\n",
     "                x=altair.X(\"mean_predicted_load_mw:Q\", scale=scale),\n",
     "                y=altair.Y(\"mean_load_mw:Q\", scale=scale),\n",
+    "                color=altair.Color(\n",
+    "                    \"fold:N\",\n",
+    "                    legend=altair.Legend(title=None),\n",
+    "                ),\n",
+    "                detail= altair.Detail(\"fold:N\")\n",
     "            )\n",
     "        )\n",
-    "    return chart\n",
+    "    return chart.resolve_scale(color=\"independent\")\n",
     "\n",
     "\n",
     "plot_reliability_diagram(cv_predictions).interactive().properties(\n",
@@ -1011,7 +1027,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f272875f",
+   "id": "fb2df66b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1024,7 +1040,7 @@
     "        # Get date range for this CV fold\n",
     "        min_date = cv_prediction[\"prediction_time\"].min().strftime(\"%Y-%m-%d\")\n",
     "        max_date = cv_prediction[\"prediction_time\"].max().strftime(\"%Y-%m-%d\")\n",
-    "        fold_label = f\"#{i+1} ({min_date} to {max_date})\"\n",
+    "        fold_label = f\"#{i+1} - {min_date} to {max_date}\"\n",
     "\n",
     "        residuals_by_hour_detailed = cv_prediction.with_columns(\n",
     "            [\n",
@@ -1055,7 +1071,6 @@
     "                x=altair.X(\"hour_of_day:O\", title=\"Hour of day\"),\n",
     "                y=altair.Y(\"q25_residual:Q\"),\n",
     "                y2=altair.Y2(\"q75_residual:Q\"),\n",
-    "                tooltip=[\"hour_of_day:O\", \"fold:N\", \"q25_residual:Q\", \"q75_residual:Q\"],\n",
     "            )\n",
     "        )\n",
     "\n",
@@ -1095,7 +1110,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "845857ad",
+   "id": "347630bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1139,12 +1154,6 @@
     "                x=altair.X(\"month_of_year:O\", title=\"Month of year\"),\n",
     "                y=altair.Y(\"q25_residual:Q\"),\n",
     "                y2=altair.Y2(\"q75_residual:Q\"),\n",
-    "                tooltip=[\n",
-    "                    \"month_of_year:O\",\n",
-    "                    \"fold:N\",\n",
-    "                    \"q25_residual:Q\",\n",
-    "                    \"q75_residual:Q\",\n",
-    "                ],\n",
     "            )\n",
     "        )\n",
     "\n",
@@ -1184,7 +1193,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "010ecdf9",
+   "id": "26284126",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -1206,7 +1215,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de754727",
+   "id": "cf8cbe5e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1216,7 +1225,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d20530b6",
+   "id": "9ca908d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1226,7 +1235,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6de66ae",
+   "id": "a23367d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1247,7 +1256,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4ed5165",
+   "id": "a05bd862",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1263,7 +1272,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7159c019",
+   "id": "66808c34",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -1279,7 +1288,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9181ca4b",
+   "id": "b8201e89",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1293,7 +1302,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de6df1c9",
+   "id": "e46cc3f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1305,7 +1314,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38c5ca8f",
+   "id": "b75186d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1321,7 +1330,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c21cfc0f",
+   "id": "a61d2309",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1389,7 +1398,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4f923bf",
+   "id": "84edeb54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1401,7 +1410,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c28930a9",
+   "id": "97e9e774",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1412,7 +1421,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4fc288a",
+   "id": "b7fe4453",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1448,7 +1457,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "163b6485",
+   "id": "3a3b69b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1458,7 +1467,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "115cf76d",
+   "id": "db3abddc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1503,7 +1512,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63bfa42d",
+   "id": "680843f9",
    "metadata": {},
    "outputs": [],
    "source": []
